frontend/css/mainApp.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
html, body {
        height: 100%;
        border: 0;
        }

#wrapper, 
#page-content-wrapper, 
.container-fluid, 
.map-place, 
#map {
    height: 100%;
    width: 100%;
}

div#page-content-wrapper {
    padding: 0 0em 2em 2em;
}

div.container-fluid {
    padding: 0;
}

div.row.map-place {
    margin: 0;
}

div.col-lg-12.map-place {
    padding: 0;
}

#autocomplete {
    border-top: none;
    border-left: none;
    border-right: none;
    width: 70%;
    border-radius: 0;
}


input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

.map-place {
    margin: 0;
    overflow: auto;
}

/* ==========================================================================
   IWindow
   ========================================================================== */
/* tmp solution to the scrollbar*/
.iw-box {
    height: 100%;
    width: 100%;
    margin: auto;
    overflow-x: hidden;
    overflow-y: hidden;
}

/* ==========================================================================
   Edit Mode
   ========================================================================== */


.container {
    height: 23em;
    width: 25em;
    max-width: 100%;
    margin: auto;
}

div.row.top-buffer {
    margin: 0 auto;
    float: none;
    margin-left: -1.2em;
}

#PIN {
    margin-right: 0.6em;
}


/* ==========================================================================
   Check Mode
   ========================================================================== */

.iw-buttons {
    padding-top: 0.5em;
    float: right;
}


#story-content-container {
  padding-top: 2em;
  padding-bottom: 2em;
  height: 50%;
  margin-left: -1.2em;
  margin-right: 0;
}

#saved-title {
  font-weight: bold;
  font-size: 150%;
}

#saved-content-all {
  margin-left: 0.3em; 
}

#iw-edit-btn {
    margin-right: 0.6em;
}

#bottom-row-layout {
 /*  border: dotted 3px blue; */
  position: relative;
  height: 3.2em;
}

#time-stamp {
   position: absolute;
   /* border: solid 3px grey; */
   display: inline;
   top: 1.2em;
}

/* ==========================================================================
   iw-user-id
   ========================================================================== */


#user-id {
/*  border: dotted 3px black;*/
  display: relative;
  height: 5.5em;
}

#iw-user-icon-container {
    display: inline;
    width: 25%;
}

#iw-user-icon {
/*  border: solid 3px grey;*/
  width: auto;
  height: auto;
  max-width: 5em;
  max-height: 5em;
}

#iw-user-name-container {
    display: inline;
}

#iw-user-name {
/*  border: solid 3px grey;*/
    float: right;
    padding-top: 1.0em;
    padding-right: 14em;
    font-size: 1.02em; 
}


/* ==========================================================================
   Profile Image and Username
   ========================================================================== */
.profile {
  position: relative;
}

#profile-icon, #profile-username {
  display: inline;
}

#profile-icon {
  width: auto;
  height: auto;
  max-width: 5em;
  max-height: 5em;
  float: left;
}

#profile-username-container {
  float: left;
  position: absolute;
  top: 1em;
  left: 5em;
}

#profile-username {
  font-family:'Fjalla One', sans-serif;
  font-size: 20px;
  color: white;
}

#profile-placeholder {
    margin-bottom: 3.5em;
}

.profile div.row {
    margin: auto;
    margin-top: 0.5em;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after,
    *:first-letter,
    *:first-line {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

